# mlkit

./: .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  README.md  demo.py  dummy_dataset_create.py  mkdocs.yml  pyproject.toml  sync-with-template.sh
docs/: index.md  installation.md
docs/mlflow/: mlflow-logger.md  stdout.md
rationai/: __init__.py
rationai/mlkit/: __init__.py  autolog.py  loget.py  provenance.py  ray_data_module.py  ray_setup.py  tuner.py  with_cli_args.py
rationai/mlkit/data/: __init__.py  mlflow_slides.py  shard_parquet.py  slide_tiles.py  stratified_batch_sampler.py
rationai/mlkit/data/datasets/: __init__.py  empaia_tiles_dataset.py  meta_tiled_slides.py  openslide_tiles_dataset.py  slides_tiles_loader.py
rationai/mlkit/data/samplers/: __init__.py  fixed_sampler.py  multiclass_batch_sampler.py  stratified_batch_sampler.py
rationai/mlkit/lightning/: __init__.py  autolog.py  trainer.py
rationai/mlkit/lightning/callbacks/: __init__.py  dataloader_agnostic.py  dataset_verification.py  environment.py  explainer.py  model_checkpoint.py  multiloader_lifecycle.py  provenance.py
rationai/mlkit/lightning/loggers/: __init__.py  get_git_tags.py  mlflow.py
rationai/mlkit/metrics/: __init__.py  aggregated_metric_collection.py  aggregators.py  lazy_metric_dict.py  nested_metric_collection.py
rationai/mlkit/mlflow/: __init__.py  parquet_dataset.py
rationai/mlkit/provenance/: __init__.py  common.py  dataset.py  dataset_to_mlflow.py  prov.py  provenance.py  register_dataset.py  register_user.py  run.py  user.py
rationai/mlkit/stream/: __init__.py  stream_capture.py  stream_logger.py  stream_modifier.py
rationai/mlkit/stream_capture/: __init__.py  stream_capture.py  stream_modifier.py
tests/: test_all.py
