[project]
name = "rationai-mlkit"
version = "0.2.2"
description = ""
authors = [
    { name = "Matěj Pekár", email = "matejpekar@mail.muni.cz" },
    { name = "Jakub Pekár", email = "jakubpekar@mail.muni.cz" },
    { name = "Adam Kukučka", email = "adamkukucka@mail.muni.cz" },
]
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "lightning>=2.2.4",
    "GitPython>=3.1.43",
    "mlflow>=2.12.1",
    "hydra-core>=1.3.2",
    "openslide-python>=1.3.1",
    "torch>=2.2.0",
    "rationai-masks @ git+https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/masks.git@feature/refactor-heatmap-assembly-for-xai",
]

[tool.pdm.dev-dependencies]
dev = ["mypy", "pre-commit", "ruff"]


[tool.pdm.scripts]
l = { composite = ["lint", "format", "mypy"] }
lint = "ruff check --fix"
format = "ruff format"
mypy = "mypy ."
post_install = { composite = [
    "pre-commit autoupdate",
    "pre-commit install",
    "pre-commit install --hook-type commit-msg",
] }
