[project]
name = "rationai-mlkit"
version = "0.4.0"
description = ""
authors = [
    { name = "Matěj Pekár", email = "matejpekar@mail.muni.cz" },
    { name = "Jakub Pekár", email = "jakubpekar@mail.muni.cz" },
    { name = "Adam Kukučka", email = "adamkukucka@mail.muni.cz" },
]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "datasets>=4.6.1",
    "gitpython>=3.1.45",
    "hydra-core>=1.3.2",
    "lightning>=2.6.0",
    "mlflow>=3.10.1",
    "openslide-python>=1.4.2",
    "pyarrow>=23.0.1",
    "rationai-masks",
    "ratiopath>=1.2.0",
    "torch>=2.9.1",
]

[dependency-groups]
dev = ["mypy", "ruff"]

[tool.uv.sources]
rationai-masks = { git = "https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/masks.git" }
